# kaggle-cmi-detectbehavior

./: .pre-commit-config.yaml  README.md  pyproject.toml
kaggle_cmi/: __init__.py  log.py
kaggle_cmi/data/: constants.py  utils.py
kaggle_cmi/explore/: basic_eda.py
kaggle_cmi/models/: conv1d_model.py  features.py  model.py  se_gru.py  torch_nn_utils.py  train.py  two_branch_model.py  utils.py
tests/: test_get_data_without_missing_values.py  test_get_linear_acceleration.py  test_get_relative_rotation.py  test_process_sequence.py
